# guide-programming-cpp

./: .gitignore  CMakeLists.txt  README.md
basics/hello/: main.cpp
basics/sizes/: CMakeLists.txt  packed.cpp  sizes.cpp
resources/uml/: README.md  bitbyte.uml
tricky/: assign_is_not_comp.cpp  bad_lambda.cpp
vitals/: CMakeLists.txt
vitals/coding/: CMakeLists.txt  bad_code.cpp  constexpr.cpp  copyable_move_or_not.cpp  do_not_implicit_conversion.cpp  good_code.cpp  local_variables.cpp
